--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,3 +7,13 @@ body {
   padding: 10px;
   text-shadow: 2px 2px 1px #000;
 }
+
+.button-delete {
+  background-color: transparent !important;
+  text-decoration: none !important;
+  color: tomato !important;
+}
+.button-delete:hover {
+  background-color: tomato !important;
+  color: white !important;
+}
